--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "lus",
   "license": "ISC",
   "bin": {
-    "lus-magic": "./dist/cli.js"
+    "lus-magic": "dist/cli.js"
   },
   "dependencies": {
     "@types/ejs": "^3.1.5",
